# devpod-provider-exoscale

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
hack/: build.sh
hack/provider/: main.go  provider.yaml
src/: main.rs
src/cmd/: command.rs  create.rs  delete.rs  init.rs  mod.rs  start.rs  state.rs  status.rs  stop.rs
src/exoscale/: exoscale.rs  mod.rs
src/options/: options.rs
src/ssh/: helper.rs  keys.rs  mod.rs
